[gd_scene load_steps=14 format=3 uid="uid://com03gqu7ssh1"]

[ext_resource type="Script" path="res://interface/scripts/EditMoneyMenu.gd" id="1_bi1pb"]
[ext_resource type="Texture2D" uid="uid://vhx86outocmp" path="res://interface/sprites/Copper.png" id="1_fjjxo"]
[ext_resource type="Texture2D" uid="uid://dce6aqx316x7g" path="res://interface/sprites/Silver.png" id="2_da8fq"]
[ext_resource type="Texture2D" uid="uid://d07ljqlouva2n" path="res://interface/sprites/Gold.png" id="3_xvgxc"]
[ext_resource type="Script" path="res://interface/scripts/CheckWeightInput.gd" id="5_gvbyn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p0xv8"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wchtu"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bu4og"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.317647, 0.317647, 0.317647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7phwm"]
bg_color = Color(0.847059, 0.847059, 0.847059, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.317647, 0.317647, 0.317647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_right = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxi34"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.317647, 0.317647, 0.317647, 1)
corner_radius_top_left = 300
corner_radius_top_right = 300
corner_radius_bottom_right = 300
corner_radius_bottom_left = 300

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8a8w"]
bg_color = Color(0.494118, 0.494118, 0.494118, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.317647, 0.317647, 0.317647, 1)
corner_radius_top_left = 300
corner_radius_top_right = 300
corner_radius_bottom_right = 300
corner_radius_bottom_left = 300

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m55rn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.317647, 0.317647, 0.317647, 1)
corner_radius_top_left = 300
corner_radius_top_right = 300
corner_radius_bottom_right = 300
corner_radius_bottom_left = 300

[sub_resource type="ButtonGroup" id="ButtonGroup_1fi85"]

[node name="EditMoneyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1520.0
offset_bottom = -760.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bi1pb")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 320.0
theme_override_styles/panel = SubResource("StyleBoxFlat_p0xv8")

[node name="MenuTitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 5.0
offset_right = 300.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Деньги"
horizontal_alignment = 1

[node name="AddLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 260.0
offset_top = 65.0
offset_right = 390.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Увеличить"
horizontal_alignment = 1

[node name="ReduceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 260.0
offset_top = 135.0
offset_right = 390.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Уменьшить"
horizontal_alignment = 1

[node name="SetLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 260.0
offset_top = 205.0
offset_right = 390.0
offset_bottom = 235.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Установить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopperImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 55.0
offset_right = 185.0
offset_bottom = 100.0
mouse_filter = 2
texture = ExtResource("1_fjjxo")

[node name="SilverImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 125.0
offset_right = 185.0
offset_bottom = 170.0
mouse_filter = 2
texture = ExtResource("2_da8fq")

[node name="GoldenImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 195.0
offset_right = 185.0
offset_bottom = 240.0
mouse_filter = 2
texture = ExtResource("3_xvgxc")

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 260.0
offset_right = 190.0
offset_bottom = 295.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.317647, 0.317647, 0.317647, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/hover = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/focus = SubResource("StyleBoxFlat_wchtu")
text = "Применить"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 260.0
offset_right = 365.0
offset_bottom = 295.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 0, 0, 0.482353)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/hover = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/disabled = SubResource("StyleBoxFlat_wchtu")
theme_override_styles/focus = SubResource("StyleBoxFlat_wchtu")
text = "Отменить"

[node name="CopperInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 120.0
offset_bottom = 100.0
mouse_default_cursor_shape = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_bu4og")
theme_override_styles/focus = SubResource("StyleBoxFlat_7phwm")
theme_override_styles/read_only = SubResource("StyleBoxFlat_bu4og")
placeholder_text = "0"
alignment = 2
max_length = 6
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true
script = ExtResource("5_gvbyn")

[node name="SilverInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 130.0
offset_right = 120.0
offset_bottom = 170.0
mouse_default_cursor_shape = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_bu4og")
theme_override_styles/focus = SubResource("StyleBoxFlat_7phwm")
theme_override_styles/read_only = SubResource("StyleBoxFlat_bu4og")
placeholder_text = "0"
alignment = 2
max_length = 6
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true
script = ExtResource("5_gvbyn")

[node name="GoldenInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 200.0
offset_right = 120.0
offset_bottom = 240.0
mouse_default_cursor_shape = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_bu4og")
theme_override_styles/focus = SubResource("StyleBoxFlat_7phwm")
theme_override_styles/read_only = SubResource("StyleBoxFlat_bu4og")
placeholder_text = "0"
alignment = 2
max_length = 6
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true
script = ExtResource("5_gvbyn")

[node name="AddButton" type="Button" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 70.0
offset_right = 250.0
offset_bottom = 85.0
theme_override_styles/normal = SubResource("StyleBoxFlat_fxi34")
theme_override_styles/hover = SubResource("StyleBoxFlat_n8a8w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m55rn")
theme_override_styles/disabled = SubResource("StyleBoxFlat_m55rn")
theme_override_styles/focus = SubResource("StyleBoxFlat_m55rn")
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_1fi85")

[node name="ReduceButton" type="Button" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 140.0
offset_right = 250.0
offset_bottom = 155.0
theme_override_styles/normal = SubResource("StyleBoxFlat_fxi34")
theme_override_styles/hover = SubResource("StyleBoxFlat_n8a8w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m55rn")
theme_override_styles/disabled = SubResource("StyleBoxFlat_m55rn")
theme_override_styles/focus = SubResource("StyleBoxFlat_m55rn")
toggle_mode = true
button_group = SubResource("ButtonGroup_1fi85")

[node name="SetButton" type="Button" parent="."]
layout_mode = 0
offset_left = 235.0
offset_top = 210.0
offset_right = 250.0
offset_bottom = 225.0
theme_override_styles/normal = SubResource("StyleBoxFlat_fxi34")
theme_override_styles/hover = SubResource("StyleBoxFlat_n8a8w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m55rn")
theme_override_styles/disabled = SubResource("StyleBoxFlat_m55rn")
theme_override_styles/focus = SubResource("StyleBoxFlat_m55rn")
toggle_mode = true
button_group = SubResource("ButtonGroup_1fi85")

[connection signal="gui_input" from="BGPanel" to="CopperInput" method="_on_bg_panel_gui_input"]
[connection signal="gui_input" from="BGPanel" to="SilverInput" method="_on_bg_panel_gui_input"]
[connection signal="gui_input" from="BGPanel" to="GoldenInput" method="_on_bg_panel_gui_input"]
[connection signal="pressed" from="AcceptButton" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_pressed"]
[connection signal="focus_entered" from="CopperInput" to="CopperInput" method="_on_focus_entered"]
[connection signal="text_changed" from="CopperInput" to="CopperInput" method="_on_text_changed"]
[connection signal="text_changed" from="CopperInput" to="." method="_on_action_money_changed" unbinds=1]
[connection signal="focus_entered" from="SilverInput" to="SilverInput" method="_on_focus_entered"]
[connection signal="text_changed" from="SilverInput" to="SilverInput" method="_on_text_changed"]
[connection signal="text_changed" from="SilverInput" to="." method="_on_action_money_changed" unbinds=1]
[connection signal="focus_entered" from="GoldenInput" to="GoldenInput" method="_on_focus_entered"]
[connection signal="text_changed" from="GoldenInput" to="GoldenInput" method="_on_text_changed"]
[connection signal="text_changed" from="GoldenInput" to="." method="_on_action_money_changed" unbinds=1]
[connection signal="pressed" from="AddButton" to="." method="_on_action_changed" binds= ["ADD"]]
[connection signal="pressed" from="ReduceButton" to="." method="_on_action_changed" binds= ["REDUCE"]]
[connection signal="pressed" from="SetButton" to="." method="_on_action_changed" binds= ["SET"]]
